# fontlift

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  FEATURE_MATRIX.md  IMPROVE--fontlift.md  PLAN.md  QWEN.md  README.md  RELEASE_CHECKLIST.md  SECURITY_CONSIDERATIONS.md  TASKS.md  TODO.md  USAGE.md  WORK.md  build-macos.sh  build.sh  deny.toml  install.sh  llms.txt  publish.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
.omc/: project-memory.json
.omc/sessions/: 11e7868f-4be1-46f7-ae97-3f90cc8ebf23.json  be7b1743-2999-4da1-aeca-864eed2f9bee.json  ca7dffcc-9f51-497d-84b7-271455a02d67.json  fa70b691-05aa-4230-a81c-f4a172aa6a9e.json
.omc/state/: subagent-tracking.json
.sisyphus/: ralph-loop.local.md
cli/: Cargo.toml  build.rs
cli/src/: CLAUDE.md  args.rs  lib.rs  main.rs  ops.rs  tests.rs
cli/tests/: macos_fake_registry_tests.rs
core/: Cargo.toml
core/src/: config.rs  journal.rs  lib.rs  tests.rs  validation_ext.rs
crates/fontlift-cli/: Cargo.toml
crates/fontlift-cli/src/: args.rs  lib.rs  main.rs  ops.rs  tests.rs
crates/fontlift-cli/tests/: macos_fake_registry_tests.rs
crates/fontlift-core/: Cargo.toml
crates/fontlift-core/src/: config.rs  journal.rs  lib.rs  tests.rs
crates/fontlift-platform-mac/: Cargo.toml
crates/fontlift-platform-mac/src/: lib.rs
crates/fontlift-platform-win/: Cargo.toml
crates/fontlift-platform-win/src/: lib.rs
crates/fontlift-python/: Cargo.toml  build.rs
crates/fontlift-python/src/: bindings.rs  lib.rs  stub.rs
docs/: 404.html  index.html  sitemap.xml
docs/api-reference/: index.html
docs/environment-variables/: index.html
docs/limitations/: index.html
docs/linux/: index.html
docs/search/: search_index.json
docs/style-guide/: index.html
examples/: basic_usage.rs
issues/: 101.md  102.md  103.md  104.md
platform-mac/src/: CLAUDE.md  lib.rs
platform-win/: Cargo.toml
platform-win/src/: lib.rs
python/: build.rs
python/fontlift/: __init__.py  cli.py  render.py
python/src/: bindings.rs  lib.rs
python/tests/: conftest.py  test_cli_entrypoints.py  test_import.py  test_render.py
src_docs/: mkdocs.yaml
src_docs/md/: api-reference.md  environment-variables.md  index.md  limitations.md  linux.md  style-guide.md
tests/: CLAUDE.md  integration_tests.rs  test_fonts.rs
tests/fixtures/: README.md
tests/fixtures/fonts/: AtkinsonHyperlegible-Regular.ttc
tests/fixtures/golden_outputs/: list_json_schema.json
validator/: Cargo.toml
validator/src/: main.rs
