[workspace]
resolver = "2"
members = [
  "cli",
  "core",
  "platform-mac",
  "platform-win",
  "python",
  "validator",
]

[workspace.package]
version = "2.0.0-dev"
authors = ["FontLab Ltd."]
edition = "2021"
rust-version = "1.75"
repository = "https://github.com/fontlaborg/fontlift"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
clap_complete = "4.5"
env_logger = "0.11"
# CLI and Python crates
fontlift-cli = { path = "cli" }
# Core crates
fontlift-core = { path = "core" }
# Platform crates
fontlift-platform-mac = { path = "platform-mac" }
fontlift-platform-win = { path = "platform-win" }
fontlift-python = { path = "python" }
fontlift-validator = { path = "validator" }
log = "0.4"
read-fonts = "0.26"
uuid = { version = "1.11", features = ["v4", "serde"] }
pyo3 = "0.24.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# External dependencies
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }

# Additional dependencies for testing
tempfile = "3.0"
tokio-test = "0.4"

# Platform-specific dependencies (objc2 ecosystem)
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-core-foundation = "0.3"
objc2-core-graphics = "0.3"
objc2-core-text = "0.3"
windows = { version = "0.54", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Storage_FileSystem",
  "Win32_System_Registry",
  "Win32_UI_Shell",
] }

# Platform-specific dependencies are defined in individual crates

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
