[build-system]
requires = [
  "hatchling>=1.25",
  "hatchling-pyo3>=0.3.4",
  "hatch-vcs>=0.4",
]
build-backend = "hatchling.build"

[project]
name = "fontlift"
description = "FontLift Python bindings and CLI powered by PyO3"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "FontLab Ltd." }]
keywords = ["fonts", "font management", "pyo3", "rust"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Rust",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
]
dependencies = ["fire>=0.5"]
dynamic = ["version"]

[project.scripts]
fontliftpy = "fontlift.cli:main"

[tool.hatch.version]
source = "vcs"
tag-pattern = "^v(?P<version>\\d+\\.\\d+\\.\\d+)$"

[tool.hatch.build.targets.wheel]
packages = ["python/fontlift"]

[tool.hatch.build.hooks.pyo3]
features = ["extension-module"]
module-name = "fontlift._native"
strip = true
