[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "fontlift"
description = "FontLift Python bindings and CLI powered by PyO3"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "FontLab Ltd." }]
keywords = ["fonts", "font management", "pyo3", "rust"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Rust",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
]
dependencies = ["fire>=0.5"]
dynamic = ["version"]

[project.scripts]
fontliftpy = "fontlift.cli:main"

[tool.maturin]
manifest-path = "crates/fontlift-python/Cargo.toml"
python-source = "python"
features = ["extension-module"]
module-name = "fontlift._native"
strip = true
