[package]
name = "fontlift-validator"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Out-of-process font validation helper for fontlift"

[[bin]]
name = "fontlift-validator"
path = "src/main.rs"

[dependencies]
fontlift-core.workspace = true
read-fonts = "0.26"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
