[package]
name = "fontlift-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI interface for fontlift"

[[bin]]
name = "fontlift"
path = "src/main.rs"

[dependencies]
fontlift-core = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Platform-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
fontlift-platform-mac = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
fontlift-platform-win = { workspace = true }

[dev-dependencies]
tempfile = "3.0"
