[package]
name = "fontlift-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core font management library for fontlift"

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

# Font loading
read-fonts = "0.36"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"