[package]
name = "fontlift-platform-mac"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "macOS platform implementation for fontlift"

[dependencies]
fontlift-core = { workspace = true }
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true

# macOS specific dependencies
core-foundation = "0.9"
core-text = "20.0"
cocoa = "0.25"
objc = "0.2"
libc = "0.2"

[dev-dependencies]
tempfile = "3.0"