[package]
name = "fontlift-platform-mac"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "macOS platform implementation for fontlift"

[dependencies]
fontlift-core = { workspace = true }
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true

# macOS specific dependencies (objc2 ecosystem)
objc2-core-foundation = { workspace = true }
objc2-core-text = { workspace = true }
libc = "0.2"

[dev-dependencies]
tempfile = "3.0"