[package]
name = "fontlift-platform-win"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Windows platform implementation for fontlift"

[dependencies]
fontlift-core = { workspace = true }
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true

# Windows specific dependencies
[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.54", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Storage_FileSystem",
  "Win32_System_Registry",
  "Win32_UI_Shell",
  "Win32_Security",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Memory",
] }

[dev-dependencies]
tempfile = "3.0"