[package]
name = "fontlift-python"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings for fontlift"

[lib]
# Name the compiled library `_native` so the exported `PyInit__native` symbol
# matches the Python import path `fontlift._native` configured in pyproject.toml.
name = "_native"
# Include "rlib" to allow cargo test to link; "cdylib" for the Python extension.
crate-type = ["cdylib", "rlib"]

[dependencies]
fontlift-core = { workspace = true }
pyo3.workspace = true
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true
tokio.workspace = true

# Platform-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
fontlift-platform-mac = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
fontlift-platform-win = { workspace = true }

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[build-dependencies]
pyo3-build-config = "0.24.1"
